--- a/resources/view/Login.fxml
+++ b/resources/view/Login.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
@@ -12,7 +18,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1024.0" maxWidth="728.0" minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" styleClass="anchorpane" stylesheets="@/css/style.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<AnchorPane maxHeight="1024.0" maxWidth="728.0" minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" styleClass="anchorpane" stylesheets="@/css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
 	<!-- TODO Add Nodes -->
 
 	<children>
@@ -49,7 +55,7 @@
 		</Button>
 		<ImageView fitHeight="271.0" fitWidth="276.0" layoutX="64.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
 			<image>
-				<Image url="@/img/logo.png" />
+				<Image url="@../img/logo.png" />
 			</image>
 		</ImageView>
 		<Label fx:id="lblStatus" layoutX="14.0" layoutY="7.0" prefHeight="27.0" prefWidth="127.0" style="-fx-text-fill: #ff5050;" textFill="#cd0909" />
