Modificada la interfaz, añadidio plugin ChartJS para generar gráficos.

--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -1,154 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TreeView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.web.WebView?>
+<?import javafx.scene.web.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane id="canvas" prefHeight="600.0" prefWidth="900.0" styleClass="anchorpane" stylesheets="@/css/style.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
-  <!-- TODO Add Nodes -->
-  <children>
-    <Pane fx:id="PanelParticipantes" prefHeight="284.0" prefWidth="256.0" styleClass="pane" stylesheets="@/css/style.css">
-      <children>
-        <Label fx:id="lblCountParticipants" layoutX="8.0" layoutY="5.0" styleClass="label-lists" stylesheets="@/css/style.css" text="Participantes: " />
-        <TextField fx:id="tfdParticipants" layoutX="7.0" layoutY="26.0" prefWidth="108.0" styleClass="text-field-main" stylesheets="@/css/style.css" text="Filtro..." />
-        <MenuButton fx:id="slcGroup" layoutX="157.0" layoutY="1.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Grupo" />
-        <TreeView layoutY="72.0" prefHeight="206.0" prefWidth="256.0" />
-        <Pane fx:id="PanelCateg" layoutY="282.0" prefHeight="314.0" prefWidth="256.0" styleClass="pane" stylesheets="@/css/style.css">
-          <children>
-            <Label layoutX="8.0" layoutY="5.0" styleClass="label-lists" stylesheets="@/css/style.css" text="Categorías / Items" />
-            <TextField fx:id="tfdItems" layoutX="7.0" layoutY="23.0" prefHeight="25.0" prefWidth="108.0" styleClass="text-field-main" stylesheets="@/css/style.css" text="Filtro..." />
-                  <TreeView fx:id="tvwGradeReport" layoutX="-1.0" layoutY="52.0" prefHeight="266.0" prefWidth="257.0" styleClass="list-view-main" stylesheets="@/css/style.css" />
-                  <MenuButton fx:id="slcType" layoutX="157.0" layoutY="23.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Tipo" />
-                  <Label alignment="CENTER_RIGHT" layoutX="120.0" layoutY="30.0" prefHeight="16.0" prefWidth="33.0" text="Tipo:">
-                     <font>
-                        <Font size="11.0" />
-                     </font>
-                  </Label>
-          </children>
-        </Pane>
-            <ListView fx:id="listParticipants" layoutY="55.0" prefHeight="231.0" prefWidth="257.0" styleClass="list-view-main" stylesheets="@/css/style.css" />
-            <MenuButton fx:id="slcRole" layoutX="157.0" layoutY="28.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Rol" />
-            <Label alignment="CENTER_RIGHT" layoutX="120.0" layoutY="6.0" text="Grupo:">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER_RIGHT" layoutX="120.0" layoutY="34.0" prefHeight="16.0" prefWidth="33.0" text="Rol:" textAlignment="RIGHT" wrapText="true">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </Label>
-      </children>
-    </Pane>
-    <TabPane layoutX="256.0" layoutY="59.0" prefHeight="541.0" prefWidth="644.0" style="-: #ffa1a7;" tabClosingPolicy="UNAVAILABLE">
-      <tabs>
-        <Tab text="Gráficos">
-          <content>
-            <AnchorPane id="Content1" minHeight="0.0" minWidth="0.0" prefHeight="534.0" prefWidth="644.0">
-              <children>
-                <LineChart id="LineChart" fx:id="lineChart" animated="false" layoutX="7.0" layoutY="8.0" prefHeight="463.0" prefWidth="644.0">
-                  <xAxis>
-                    <CategoryAxis side="BOTTOM" fx:id="xAxis">
-                                 <tickLabelFont>
-                                    <Font size="11.0" />
-                                 </tickLabelFont></CategoryAxis>
-                  </xAxis>
-                  <yAxis>
-                    <NumberAxis fx:id="yAxis" animated="false" autoRanging="false" side="LEFT" tickLength="5.0" tickUnit="1.0" upperBound="10.0">
-                                 <tickLabelFont>
-                                    <Font size="12.0" />
-                                 </tickLabelFont></NumberAxis>
-                  </yAxis>
-                           <padding>
-                              <Insets bottom="-2.0" left="-5.0" top="-2.0" />
-                           </padding>
-                </LineChart>
-                <Button fx:id="btnExport" alignment="CENTER_RIGHT" layoutX="14.0" layoutY="472.0" mnemonicParsing="false" onAction="#saveChart" style="-fx-font-size: 13;" stylesheets="@/css/style.css" text="Exportar gráfico">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor></Button>
-                      <Button fx:id="btnExit" alignment="CENTER_RIGHT" layoutX="590.0" layoutY="472.0" mnemonicParsing="false" onAction="#closeApplication" style="-fx-font-size: 13;" styleClass="rich-blue" stylesheets="@/css/style.css" text="Salir">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </Button>
-              </children>
-            </AnchorPane>
-          </content>
-        </Tab>
-        <Tab text="Calificaciones">
-          <content>
-            <AnchorPane id="Content2" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-            	<children>
-                	<WebView fx:id="webView" prefHeight="455.0" prefWidth="644.0" />
-                        <Button fx:id="btnExit1" alignment="CENTER_RIGHT" layoutX="590.0" layoutY="472.0" mnemonicParsing="false" onAction="#closeApplication" style="-fx-font-size: 13;" styleClass="rich-blue" stylesheets="@/css/style.css" text="Salir">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </Button>
-                        <Button fx:id="btnExportTable" alignment="CENTER_RIGHT" layoutX="14.0" layoutY="472.0" mnemonicParsing="false" onAction="#saveTable" style="-fx-font-size: 13;" stylesheets="@/css/style.css" text="Exportar tabla">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </Button>
-                </children>
-            </AnchorPane>
-          </content>
-        </Tab>
-      </tabs>
-    </TabPane>
-      <MenuBar layoutX="256.0" layoutY="1.0" prefHeight="59.0" prefWidth="327.0" stylesheets="@/css/style.css">
-        <menus>
-          <Menu mnemonicParsing="false" text="Archivo">
-            <items>
-              <MenuItem fx:id="MIChangeCourse" mnemonicParsing="false" onAction="#changeCourse" text="Cambiar asignatura" />
-                  <MenuItem fx:id="MISaveChart" mnemonicParsing="false" onAction="#saveChart" text="Guardar gráfico como..." />
-                  <MenuItem fx:id="MISaveTable" mnemonicParsing="false" onAction="#saveTable" text="Guardar tabla como..." />
-                  <MenuItem fx:id="MILogOut" mnemonicParsing="false" onAction="#logOut" text="Cerrar sesión" />
-                  <MenuItem fx:id="MIExit" mnemonicParsing="false" onAction="#closeApplication" text="Salir" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Editar">
-            <items>
-              <MenuItem fx:id="MIClearSelection" mnemonicParsing="false" onAction="#clearSelection" text="Borrar selección" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Ayuda">
-            <items>
-              <MenuItem fx:id="MIAboutUBUGrades" mnemonicParsing="false" onAction="#aboutUBUGrades" text="Acerca de UBUGrades" />
-            </items>
-          </Menu>
-        </menus>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
-         <styleClass>
-            <String fx:value="menu-tools" />
-            <String fx:value="menu-bar-tools" />
-         </styleClass>
-      </MenuBar>
-    <Label fx:id="lblActualCourse" contentDisplay="CENTER" layoutX="580.0" layoutY="20.0" prefHeight="20.0" prefWidth="320.0" styleClass="label-info" stylesheets="@/css/style.css" text="Curso actual: " />
-    <Label fx:id="lblActualUser" layoutX="580.0" prefHeight="24.0" prefWidth="320.0" styleClass="label-info" stylesheets="@/css/style.css" text="Usuario: " />
-    <Label fx:id="lblActualHost" contentDisplay="RIGHT" layoutX="580.0" layoutY="38.0" prefHeight="21.0" prefWidth="320.0" styleClass="label-info" stylesheets="@/css/style.css" text="Host actual: " />
-      <Separator layoutX="580.0" orientation="VERTICAL" prefHeight="59.0" prefWidth="4.0" />
-  </children>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="750.0" prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+   <center>
+      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+        <tabs>
+          <Tab text="Graficos">
+               <content>
+                  <WebView fx:id="webViewChart" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" />
+               </content>
+          </Tab>
+          <Tab text="Calificaciones">
+               <content>
+                  <WebView fx:id="webViewCalificaciones" prefHeight="200.0" prefWidth="200.0" />
+               </content>
+          </Tab>
+        </tabs>
+      </TabPane>
+   </center>
+   <left>
+      <GridPane prefHeight="464.0" prefWidth="250.0" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" percentWidth="100.0" prefWidth="250.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints percentHeight="50.0" vgrow="SOMETIMES" />
+          <RowConstraints percentHeight="50.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <BorderPane prefHeight="200.0" prefWidth="200.0">
+               <top>
+                  <Pane minHeight="64.0" prefHeight="64.0" prefWidth="250.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label fx:id="lblCountParticipants" layoutX="6.0" layoutY="6.0" text="Participantes:" />
+                        <TextField fx:id="tfdParticipants" layoutX="6.0" layoutY="31.0" prefHeight="25.0" prefWidth="108.0" promptText="Filtro..." />
+                        <Label layoutX="122.0" layoutY="6.0" text="Grupo:" />
+                        <Label layoutX="130.0" layoutY="35.0" text="Rol:" />
+                        <MenuButton fx:id="slcGroup" layoutX="160.0" layoutY="2.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="88.0" text="Grupo" />
+                        <MenuButton fx:id="slcRole" layoutX="160.0" layoutY="31.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="88.0" text="Rol" />
+                     </children>
+                  </Pane>
+               </top>
+               <center>
+                  <ListView fx:id="listParticipants" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+               </center>
+            </BorderPane>
+            <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+               <top>
+                  <Pane minHeight="63.0" prefHeight="63.0" prefWidth="250.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label layoutX="8.0" layoutY="6.0" text="Categorías/Items" />
+                        <TextField fx:id="tfdItems" layoutX="8.0" layoutY="30.0" prefHeight="28.0" prefWidth="108.0" promptText="Filtro..." />
+                        <Label layoutX="125.0" layoutY="36.0" text="Tipo:" />
+                        <MenuButton fx:id="slcType" layoutX="162.0" layoutY="32.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="88.0" text="Tipo" />
+                     </children>
+                  </Pane>
+               </top>
+               <center>
+                  <TreeView fx:id="tvwGradeReport" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+               </center>
+               <bottom>
+                  <Button fx:id="btnGenerarGrafico" mnemonicParsing="false" prefWidth="250.0" text="Generar Gráfico" BorderPane.alignment="CENTER" />
+               </bottom>
+            </BorderPane>
+         </children>
+      </GridPane>
+   </left>
+   <top>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="75.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <MenuBar minWidth="162.0" prefHeight="24.0" prefWidth="162.0">
+              <menus>
+                <Menu mnemonicParsing="false" text="Archivo">
+                  <items>
+                        <MenuItem fx:id="MIChangeCourse" mnemonicParsing="false" onAction="#changeCourse" text="Cambiar Asignatura" />
+                    <MenuItem fx:id="MISaveChart" mnemonicParsing="false" onAction="#saveChart" text="Guardar gráfico como..." />
+                        <MenuItem fx:id="MISaveTable" mnemonicParsing="false" onAction="#saveTable" text="Guardar tabla como..." />
+                        <MenuItem fx:id="MILogOut" mnemonicParsing="false" onAction="#logOut" text="Cerrar sesión" />
+                        <MenuItem fx:id="MIExit" mnemonicParsing="false" onAction="#closeApplication" text="Salir" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Editar">
+                  <items>
+                    <MenuItem fx:id="MIClearSelection" mnemonicParsing="false" onAction="#clearSelection" text="Borrar selección" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Ayuda">
+                  <items>
+                    <MenuItem fx:id="MIAboutUBUGrades" mnemonicParsing="false" onAction="#aboutUBUGrades" text="Acerca de UBUGrades" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+            <GridPane GridPane.columnIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="lblActualUser" text="Usuario:" />
+                  <Label fx:id="lblActualCourse" text="Curso actual:" GridPane.columnIndex="1" />
+                  <Label fx:id="lblActualHost" text="Host actual:" GridPane.columnIndex="2" />
+               </children>
+            </GridPane>
+         </children>
+      </GridPane>
+   </top>
+</BorderPane>
