--- a/resources/view/Login.fxml
+++ b/resources/view/Login.fxml
@@ -22,7 +22,7 @@
 	<!-- TODO Add Nodes -->
 
 	<children>
-		<Group id="Group" layoutX="54.0" layoutY="260.0">
+		<Group id="Group" layoutX="54.0" layoutY="280.0">
 			<children>
 				<Label layoutX="20.0" layoutY="30.0" text="Usuario:">
 					<font>
@@ -33,14 +33,14 @@
 				<Label font="$x1" layoutX="20.0" layoutY="105.0" text="Host:" />
 			</children>
 		</Group>
-		<Group id="Group" layoutX="152.0" layoutY="260.0">
+		<Group id="Group" layoutX="152.0" layoutY="280.0">
 			<children>
 				<TextField id="txtUname" fx:id="txtUsername" layoutY="27.0" prefWidth="173.0" styleClass="text-field-login" stylesheets="@/css/style.css" />
 				<PasswordField id="yxyPassword" fx:id="txtPassword" layoutY="63.0" prefWidth="173.00009999999747" styleClass="text-field-login" stylesheets="@/css/style.css" />
 				<TextField fx:id="txtHost" layoutY="100.0" prefWidth="173.0" styleClass="text-field-login" stylesheets="@/css/style.css" />
 			</children>
 		</Group>
-		<Button id="Entrar" fx:id="btnLogin" cancelButton="false" defaultButton="false" disable="false" focusTraversable="true" graphicTextGap="5.0" layoutX="100.0" layoutY="405.0" mnemonicParsing="false" onAction="#login" prefWidth="70.0" text="Entrar" textOverrun="ELLIPSIS" underline="false" visible="true">
+		<Button id="Entrar" fx:id="btnLogin" cancelButton="false" defaultButton="false" disable="false" focusTraversable="true" graphicTextGap="5.0" layoutX="100.0" layoutY="425.0" mnemonicParsing="false" onAction="#login" prefWidth="70.0" text="Entrar" textOverrun="ELLIPSIS" underline="false" visible="true">
 			<font>
 				<Font size="14.0" fx:id="x2" />
 			</font>
@@ -48,18 +48,18 @@
 				<Cursor fx:constant="HAND" />
 			</cursor>
 		</Button>
-		<Button fx:id="btnDelete" font="$x2" layoutX="230.0" layoutY="405.0" mnemonicParsing="false" onAction="#clear" prefWidth="70.0" stylesheets="@/css/style.css" text="Borrar">
+		<Button fx:id="btnDelete" font="$x2" layoutX="230.0" layoutY="425.0" mnemonicParsing="false" onAction="#clear" prefWidth="70.0" stylesheets="@/css/style.css" text="Borrar">
 			<cursor>
 				<Cursor fx:constant="HAND" />
 			</cursor>
 		</Button>
-		<ImageView fitHeight="271.0" fitWidth="276.0" layoutX="64.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+		<ImageView fitHeight="271.0" fitWidth="276.0" layoutX="64.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
 			<image>
 				<Image url="@../img/logo.png" />
 			</image>
 		</ImageView>
-		<Label fx:id="lblStatus" layoutX="14.0" layoutY="7.0" prefHeight="27.0" prefWidth="127.0" style="-fx-text-fill: #ff5050;" textFill="#cd0909" />
-      <ProgressBar fx:id="progressBar" layoutX="130.0" layoutY="448.0" prefHeight="18.0" prefWidth="139.0" progress="0.0" visible="false" />
+		<Label fx:id="lblStatus" layoutX="14.0" layoutY="7.0" prefHeight="27.0" prefWidth="375.0" style="-fx-text-fill: #ff5050;" textAlignment="CENTER" textFill="#cd0909" />
+      <ProgressBar fx:id="progressBar" layoutX="130.0" layoutY="468.0" prefHeight="18.0" prefWidth="139.0" progress="0.0" visible="false" />
       
 	</children>
 </AnchorPane>
