--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane fx:id="canvas" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="750.0" prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<BorderPane fx:id="canvas" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="750.0" prefHeight="500.0" prefWidth="750.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <left>
       <GridPane prefHeight="464.0" prefWidth="250.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -52,7 +52,7 @@
       </GridPane>
    </left>
    <top>
-      <GridPane BorderPane.alignment="CENTER">
+      <GridPane id="topBar" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="75.0" prefWidth="100.0" />
@@ -94,9 +94,9 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="lblActualUser" text="Usuario:" />
-                  <Label fx:id="lblActualCourse" text="Curso actual:" GridPane.columnIndex="1" />
-                  <Label fx:id="lblActualHost" text="Host actual:" GridPane.columnIndex="2" />
+                  <Label id="topBarLabels" fx:id="lblActualUser" text="Usuario:" />
+                  <Label id="topBarLabels" fx:id="lblActualCourse" text="Curso actual:" GridPane.columnIndex="1" />
+                  <Label id="topBarLabels" fx:id="lblActualHost" text="Host actual:" GridPane.columnIndex="2" />
                </children>
             </GridPane>
          </children>
