Mejoras de la interfaz.

--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -105,7 +105,7 @@
    <center>
       <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <center>
-            <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+            <TabPane prefHeight="200.0" prefWidth="200.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
               <tabs>
                 <Tab text="Graficos">
                      <content>
@@ -120,19 +120,6 @@
               </tabs>
             </TabPane>
          </center>
-         <top>
-            <GridPane prefHeight="20.0" prefWidth="500.0" BorderPane.alignment="CENTER">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <CheckBox fx:id="meanSelector" mnemonicParsing="false" text="Media" />
-               </children>
-            </GridPane>
-         </top>
       </BorderPane>
    </center>
 </BorderPane>
