--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -104,6 +104,7 @@
 	/*-fx-border-color:#cc0044;*/
 	-fx-font-size: 11.0px;
 	-fx-text-fill: white;
+	-fx-font-weight: bold;
 }
 
 .menu-button .arrow-button {
@@ -122,6 +123,7 @@
 .menu-item .label{
 	-fx-background-color: #ab263c;
 	-fx-text-fill: white;
+	-fx-font-weight: bold;
 }
 
 .menu-item:hover .label{
@@ -143,6 +145,7 @@
 
 #topBarLabels{
 	-fx-text-fill: white;
+	-fx-font-weight: bold;
 }
 
 .tab-pane *.tab-header-background {
