--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -107,11 +107,16 @@
          <center>
             <TabPane prefHeight="200.0" prefWidth="200.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
               <tabs>
-                <Tab text="Graficos">
+                <Tab text="Lineas">
                      <content>
-                        <WebView fx:id="webViewChart" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" />
+                        <WebView fx:id="webViewLine" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" />
                      </content>
                 </Tab>
+                  <Tab text="Radar">
+                     <content>
+                        <WebView fx:id="webViewRadar" prefHeight="200.0" prefWidth="200.0" />
+                     </content>
+                  </Tab>
                 <Tab text="Calificaciones">
                      <content>
                         <WebView fx:id="webViewCalificaciones" prefHeight="200.0" prefWidth="200.0" />
