--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -117,6 +117,11 @@
                         <WebView fx:id="webViewRadar" prefHeight="200.0" prefWidth="200.0" />
                      </content>
                   </Tab>
+                  <Tab text="Box Plot">
+                     <content>
+                        <WebView fx:id="webViewBoxPlot" prefHeight="200.0" prefWidth="200.0" />
+                     </content>
+                  </Tab>
                 <Tab text="Calificaciones">
                      <content>
                         <WebView fx:id="webViewCalificaciones" prefHeight="200.0" prefWidth="200.0" />
