--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -107,21 +107,11 @@
          <center>
             <TabPane prefHeight="200.0" prefWidth="200.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
               <tabs>
-                <Tab text="Lineas">
+                <Tab text="Gráficos">
                      <content>
-                        <WebView fx:id="webViewLine" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" />
+                        <WebView fx:id="webViewCharts" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" />
                      </content>
                 </Tab>
-                  <Tab text="Radar">
-                     <content>
-                        <WebView fx:id="webViewRadar" prefHeight="200.0" prefWidth="200.0" />
-                     </content>
-                  </Tab>
-                  <Tab text="Box Plot">
-                     <content>
-                        <WebView fx:id="webViewBoxPlot" prefHeight="200.0" prefWidth="200.0" />
-                     </content>
-                  </Tab>
                 <Tab text="Calificaciones">
                      <content>
                         <WebView fx:id="webViewCalificaciones" prefHeight="200.0" prefWidth="200.0" />
