--- a/resources/view/Login.fxml
+++ b/resources/view/Login.fxml
@@ -58,7 +58,10 @@
 				<Image url="@../img/logo.png" />
 			</image>
 		</ImageView>
-		<Label fx:id="lblStatus" layoutX="14.0" layoutY="7.0" prefHeight="27.0" prefWidth="375.0" style="-fx-text-fill: #ff5050;" textAlignment="CENTER" textFill="#cd0909" />
+		<Label fx:id="lblStatus" alignment="CENTER" layoutX="12.0" layoutY="464.0" minHeight="27.0" minWidth="375.0" prefHeight="27.0" prefWidth="375.0" style="-fx-text-fill: #ff5050;" textFill="#cd0909">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
       <ProgressBar fx:id="progressBar" layoutX="130.0" layoutY="468.0" prefHeight="18.0" prefWidth="139.0" progress="0.0" visible="false" />
       
 	</children>
