--- a/resources/view/Welcome.fxml
+++ b/resources/view/Welcome.fxml
@@ -60,5 +60,9 @@
 			</cursor>
 		</Button>
       <ProgressBar fx:id="progressBar" layoutX="340.0" layoutY="507.0" prefHeight="18.0" prefWidth="139.0" progress="0.0" />
+      <Label fx:id="lblProgress" alignment="CENTER" layoutX="136.0" layoutY="545.0" prefHeight="17.0" prefWidth="540.0" text="Progress" textAlignment="CENTER" visible="false">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
 	</children>
 </AnchorPane>
